# voxel_pathtracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color_theme.txr  documents  raycaster.out  todo
assets/: test.xpm
engine/: makefile
engine/inc/: engine.h  vector.h
engine/libvector/inc/: vector.h
engine/libvector/src/: adder.c  getter.c  iterations.c  manager.c  method_choice.c
engine/minilibx-linux/test/: mlx-test
engine/src/: color.c  drawing_1.c  drawing_2.c  drawing_3.c  engine_1.c  engine_2.c  engine_config.c  event_1.c  event_2.c  sprite_1.c
inc/: camera.h  map.h  morton.h  random.h  ray.h
inc/math_vec/: methodes.h  types.h
lib/: Makefile  README.md
lib/inc/: vector.h
lib/src/: manager.c  remover.c  size_modifiers.c
src/: cast_ray.c  main.c  map.c  random.c  render.c
